2003-02-19 15:06  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m: Optimize run_for_glyph_index() by
	caching the last run. Optimize allocation of line frags.

	* Source/NSLayoutManager.m
	(-textStorage:edited:range:changeInLength:invalidatedRange:): Fix
	clearing of soft-invalidated information if there's an invalidation
	and we don't have layout past the invalidated range.

2003-02-19 03:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m (-_glyphForCharacter:index:positions::):
	Use binary search to find the index of the character in the run.

	(-setLocation:forStartOfGlyphRange:): Start the search for the line
	frag from the back, as the line frag we're searching will often
	be the last one (always with GSHorizontalTypesetter).

2003-02-19 00:31  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h,
	Source/GSHorizontalTypesetter.m, Source/GSLayoutManager.m: Optimize
	reuse of soft-invalidated layout a bit in a common case.

2003-02-19 00:10  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m (-invalidateGlyphsForCharacterRange:
	changeInLength:actualCharacterRange:): Correct the condition for
	splitting the initial run.

2003-02-18 21:24  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m:
	Add basic interface that lets the typesetter access soft-invalidated
	layout information.

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Use
	the soft-invalidated information to avoid rebuilding the layout
	(when possible).

	* Source/NSLayoutManager.m: Fix edge case in soft invalidation.

2003-02-18  Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m
	[colorTable] corrected the output of the colour table, by using a
	C array instead of an NSMutableArray.
	* TextConverters/RTF/RTFConsumer.m