@@ -453,6 +453,7 @@ void __dummy_GMAppKit_functionForLinking() {}
     nc = [unarchiver decodeIntWithName:@"numberOfColumns"];
     cell_array = [unarchiver decodeObjectWithName:@"cells"];
     [self renewRows:nr columns:nc];
+    _selectedRow = _selectedColumn = 0;
     for (i = 0; (i < [cell_array count]) && (i < nr*nc); i++)
     {
         id	cell = [cell_array objectAtIndex:i];
